[package]
name = "esp32-rgb-led"
version = "0.1.0"
authors = ["Kay Hannay <klinux@hannay.de>"]
edition = "2021"
license = "MIT"
publish = false

[dependencies]
esp32c6-hal = { version = "0.7.0", features = ["embassy", "async", "rt", "embassy-time-timg0"] }
esp-backtrace = { version = "0.10.0", features = ["esp32c6", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", default-features = false, features = [
    "esp32c6",
    "jtag_serial",
    "critical-section",
    "colors",
] }
esp-wifi  = { version = "0.2.0", features = ["esp32c6", "wifi"] }
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
heapless = { version = "0.7.17", default-features = false }
smart-leds = "0.3.0"
esp-hal-smartled = {version = "0.7.0", features = ["esp32c6"]}
fugit = "0.3.7"